--- a/src/Components/PageNot/Pages.css
+++ b/src/Components/PageNot/Pages.css
@@ -130,7 +130,7 @@ button {
   border: none;
   padding: 0;
   font-size: 0;
-  line-height: 0;
+  /* line-height: 0; */
   background: none;
   cursor: pointer;
 }
