new Chnages bugss

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2921,9 +2921,10 @@ ul.list-inline li a:hover {
   }
   /* .hideonmob_icon{display: none;} */
   .userprofilediv_new .userimgdiv img {
-           width: 36px !important;
-        top: -2px;
-        right: 6px;
+    width: 36px !important;
+    top: -2px;
+    right: 6px;
+    height: 36px;
   }
   .userprofilediv_new .userverifyimg img {
     top: 11px;
@@ -3850,6 +3851,9 @@ ul.list-inline li a:hover {
   width: 100%;
   padding: 6px;
   vertical-align: baseline;
+  line-height: 35px;
+  width: 35px;
+  height: 35px;
 }
 .coltabbingdiv .navtabdiv .nav-tabs .nav-item .nav-link i {
   font-weight: 600;
@@ -3940,7 +3944,7 @@ ul.list-inline li a:hover {
   .coltabbingdiv .navtabdiv .nav-tabs {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 7px;
     margin-bottom: 20px;
   }
   .coltabdata_righttext .tabingrighttextdiv {
@@ -4632,7 +4636,7 @@ ul.list-inline li a:hover {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  gap: 10px;
+  gap: 6px;
 }
 .checkout_cartdiv .cart_jackpotdetails {
   display: flex;
@@ -5604,4 +5608,9 @@ input.updateinput {
 }
 .forgotpas_btn_signin {
   cursor: pointer;
+}
+@media (max-width: 820px) and (min-width: 767px) {
+  .payment_methoddiv {
+    padding: 6px 4px;
+  }
 }
