--- a/public/css/main.css
+++ b/public/css/main.css
@@ -659,7 +659,7 @@ ul.list-inline li a:hover {
   background-image: url(../images/contest_bg_img.png);
   background-size: cover;
   background-repeat: no-repeat;
-  box-shadow: 0px 4px 20px -1px #00000000;
+  box-shadow: 15px 13px 13px -12px rgba(00, 00, 00, 0.3);
 }
 
 .pricecompitionmaindiv .compitionsbox {
@@ -3051,8 +3051,16 @@ ul.list-inline li a:hover {
   }
 
   to {
-    transform: translateX(-50%);
+    transform: translateX(-95%);
   }
+
+  /* 0% {
+          transform: translateX(10%);
+        }
+    
+        100% {
+          transform: translateX(-96%);
+        } */
 }
 
 .track .srcolltext_div {
@@ -3301,6 +3309,10 @@ ul.list-inline li a:hover {
   width: 33px;
 }
 
+.menubar_divmain {
+  cursor: pointer;
+}
+
 .menuname_withicon .menuname h4 {
   font-size: 14px;
   font-weight: 600;
@@ -3513,9 +3525,10 @@ ul.list-inline li a:hover {
 .countheading_endsin h2 {
   text-align: center;
   margin-bottom: 5px;
-  color: #00e56a;
+  color: #f8fbf9;
   text-shadow: 1px 2px 3px #000;
-  font-size: 36px;
+  font-size: 28px;
+  font-weight: 800!important;
 }
 
 .countdowndate_newshi .countdown {
@@ -3635,6 +3648,7 @@ ul.list-inline li a:hover {
   font-weight: 600;
   color: #000;
   margin-bottom: 15px;
+  text-align: left;
 }
 
 .colaboutusdiv_inner .aboutusdiv_text p {
@@ -3649,7 +3663,9 @@ ul.list-inline li a:hover {
   width: 100%;
   margin: 0 auto;
   display: block;
-  border-radius: 10px;
+  border-radius: 15px;
+  border: 3px solid #009e49;
+  box-shadow: 15px 13px 13px -12px rgba(00, 00, 00, 0.3);
 }
 
 @media (max-width: 767px) {
@@ -3664,13 +3680,18 @@ ul.list-inline li a:hover {
 
 .col4pressdi .inthepressdivmain {
   margin-bottom: 30px;
-  padding: 4px;
+  padding: 12px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 10px;
 }
 
 .inthepressdivmain img {
   width: 100%;
   margin: 0 auto;
   display: block;
+  border: 2px solid #0b1874;
+  border-radius: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .inthepressdivmain p {
@@ -3710,7 +3731,8 @@ ul.list-inline li a:hover {
   background-image: url(../images/contest_bg_img.png);
   background-size: cover;
   background-repeat: no-repeat;
-  box-shadow: 0px 4px 20px -1px #00000000;
+  border: 2px solid #009e49;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .winnerbox_live_imgdiv img {
@@ -4505,10 +4527,10 @@ ul.list-inline li a:hover {
   padding-left: 30px;
 }
 
-.tabingrighttextdiv .tab-content .tab-pane .legaltermsdata_div {
+/* .tabingrighttextdiv .tab-content .tab-pane .legaltermsdata_div {
   max-height: 500px;
   overflow: auto;
-}
+} */
 
 .legaltermsdata_div .innerlegal_heaidngwithpara h3 {
   font-size: 18px;
@@ -5130,13 +5152,14 @@ ul.list-inline li a:hover {
   line-height: 36px;
   /* box-shadow: 0px 2px 6px 0px #00000040; */
   text-align: center;
-  padding: 2px;
+  padding: 4px;
   border-radius: 50%;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .the_icon {
@@ -6628,4 +6651,112 @@ input.updateinput {
 
 .see-more-btn:hover {
   color: #0056b3;
+}
+
+.paddingnoneformob_legelpage .tab-content>.active {
+  display: block;
+  height: 500px;
+  overflow: auto;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(235 28 36);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 0;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #45a000;
+  border-radius: 10px;
+}
+
+.compititonmgdivnew {
+  position: relative;
+}
+
+p.hidball {
+  position: absolute !important;
+  bottom: 10px !important;
+  color: #0b1874 !important;
+  background: #fff !important;
+  padding: 9px !important;
+  font-size: 18px !important;
+  border-radius: 10px !important;
+  margin-left: 10px !important;
+  font-weight: 700 !important;
+}
+
+.no-data-message {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #999;
+  font-weight: 900;
+  margin-top: 20px;
+}
+
+.contest_main .contest_for_contest{
+      position: fixed;
+        top: 0;
+        background: #303030a3;
+        width: 100%;
+        height: 100%;
+        z-index: 99;
+        overflow: auto;
+}
+
+.contest_for_contest {
+  display: none;
+}
+
+.contest_main .contest_newpopup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 20%;
+  position: relative;
+}
+.contest_newpopup .addtocart_content_popup {
+  background: #ededf0;
+  padding: 30px;
+  border-radius: 12px;
+  width: 600px;
+  box-shadow: 0px 2px 6px 0px #00000040;
+  position: relative;
+}
+.contest_maindiv .contesthead h2 {
+  color: #000000;
+  font-size: 21px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  margin-top: 0px;
+}
+.conteststextwithheading p {
+  font-size: 16px;
+  text-align: justify;
+  color: #000;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+.everymonday_livewatchdiv {
+  margin-bottom: 25px;
+  margin-top: 25px;
+}
+.everymonday_livewatchdiv .watchondiv {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+}
+.everymonday_livewatchdiv .watchondiv h4 {
+  margin-bottom: 0;
+  font-size: 22px;
+  font-weight: 600;
+}
+.everymonday_livewatchdiv .watchondiv img {
+  width: 40px;
 }
