--- a/public/css/main.css
+++ b/public/css/main.css
@@ -253,6 +253,10 @@ ul.list-inline li a:hover {
     border-top: 0px solid #009e49;
     border-left: 1px solid #009e49;
   }
+
+  .d-flex.gap-5.justify-content-between.align-items-center p {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -322,7 +326,7 @@ ul.list-inline li a:hover {
 
 @media (max-width: 767px) {
   .navbarlogodiv img {
-    width: 160px !important;
+    width: 140px !important;
   }
 
   .header3 .h3-navbar {
@@ -1531,7 +1535,7 @@ ul.list-inline li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 20%;
+  top: 15%;
   position: relative;
 }
 
@@ -3372,6 +3376,7 @@ ul.list-inline li a:hover {
   .navbar_mainnavdiv_shi {
     display: flex;
     flex-wrap: initial;
+    gap: 10px;
   }
 
   .navbar_afterlogin .afterlogin_icons_nav a img {
@@ -3528,7 +3533,7 @@ ul.list-inline li a:hover {
   color: #f8fbf9;
   text-shadow: 1px 2px 3px #000;
   font-size: 28px;
-  font-weight: 800!important;
+  font-weight: 800 !important;
 }
 
 .countdowndate_newshi .countdown {
@@ -6020,6 +6025,7 @@ ul.list-inline li a:hover {
   .navbar_mainnavdiv_shi {
     display: flex;
     flex-wrap: initial;
+    gap: 10px;
   }
 
   .newnavbarleft {
@@ -6701,14 +6707,14 @@ p.hidball {
   margin-top: 20px;
 }
 
-.contest_main .contest_for_contest{
-      position: fixed;
-        top: 0;
-        background: #303030a3;
-        width: 100%;
-        height: 100%;
-        z-index: 99;
-        overflow: auto;
+.contest_main .contest_for_contest {
+  position: fixed;
+  top: 0;
+  background: #303030a3;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  overflow: auto;
 }
 
 .contest_for_contest {
@@ -6722,6 +6728,7 @@ p.hidball {
   top: 20%;
   position: relative;
 }
+
 .contest_newpopup .addtocart_content_popup {
   background: #ededf0;
   padding: 30px;
@@ -6730,6 +6737,7 @@ p.hidball {
   box-shadow: 0px 2px 6px 0px #00000040;
   position: relative;
 }
+
 .contest_maindiv .contesthead h2 {
   color: #000000;
   font-size: 21px;
@@ -6737,6 +6745,7 @@ p.hidball {
   margin-bottom: 15px;
   margin-top: 0px;
 }
+
 .conteststextwithheading p {
   font-size: 16px;
   text-align: justify;
@@ -6744,21 +6753,98 @@ p.hidball {
   font-weight: 400;
   margin-bottom: 20px;
 }
+
 .everymonday_livewatchdiv {
   margin-bottom: 25px;
   margin-top: 25px;
 }
+
 .everymonday_livewatchdiv .watchondiv {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   gap: 15px;
 }
+
 .everymonday_livewatchdiv .watchondiv h4 {
   margin-bottom: 0;
   font-size: 22px;
   font-weight: 600;
 }
+
 .everymonday_livewatchdiv .watchondiv img {
   width: 40px;
+}
+
+.calNew {
+  background-color: aliceblue;
+  color: #000;
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+  padding: 0;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.d-flex.gap-5.justify-content-between.align-items-center {
+  gap: 20px;
+}
+
+.btn.btn-dark {
+  outline: none;
+  font-size: 14px;
+  padding: 6px 4px;
+  width: 135px;
+  border-radius: 8px;
+  font-weight: 600;
+  box-shadow: 0px 2px 4px 0px #00000040;
+  background: #009E49;
+  border: 1px solid #009E49;
+  color: #fff;
+}
+
+a.btn-download {
+  color: #fff;
+}
+
+.d-flex.gap-3.align-items-start {
+  gap: 10px;
+}
+
+.d-flex.gap-3.align-items-start img {
+  background: #fff;
+  border-radius: 50%;
+}
+
+.emptypresstext.image-press img {
+  border-radius: 10px;
+}
+
+.emptypresstext.image-press h2 {
+  color: #0b1874;
+  font-weight: 700;
+  font-size: 32px;
+  text-align: left;
+}
+
+@media(max-width:767px) {
+  .d-flex.gap-5.justify-content-between.align-items-center {
+    gap: 0;
+  }
+
+  .d-flex.gap-5.justify-content-between.align-items-center img {
+    display: none;
+  }
+
+  .d-flex.gap-5.justify-content-between.align-items-center p {
+    display: none;
+  }
+
+  .btn.btn-dark {
+    font-size: 11px;
+    width: 102px;
+    padding: 6px 3px;
+  }
 }
