liv payment Chnaged

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6891,3 +6891,8 @@ a.btn-download {
   font-weight: bold;
   color: #4CAF50;
 }
+
+.disabled-btn {
+  background-color: gray;
+  cursor: not-allowed;
+}
