--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5591,9 +5591,9 @@ ul.list-inline li a:hover {
 }
 
 .payment_process_popup {
-  position: fixed;
+  position: relative;
   top: 0;
-  background: #303030a3;
+  /* background: #303030a3; */
   width: 100%;
   height: 100%;
   z-index: 99;
@@ -5662,6 +5662,7 @@ ul.list-inline li a:hover {
   display: block;
   line-height: 50px;
   text-align: center;
+  cursor: pointer;
 }
 
 .successfullypayment .cross_payprocess {
