--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,12 @@ html body .m-t-10 {
   margin-top: 10px;
 }
 
+/* @media screen and (orientation: landscape) {
+  body {
+    display: none;
+  }
+} */
+
 .dropdown-item {
   padding: 8px 1rem;
   color: #000;
@@ -969,7 +975,7 @@ ul.list-inline li a:hover {
   margin-bottom: 0;
   color: #818088;
   display: inline-block;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .copyrightwithinrdropdown .divforcopyright .seprator {
@@ -1535,7 +1541,7 @@ ul.list-inline li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 15%;
+  top: 5%;
   position: relative;
 }
 
@@ -2375,7 +2381,7 @@ ul.list-inline li a:hover {
 }
 
 .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
-  top: 25%;
+  top: 8%;
 }
 
 .deleteacc_mdldlg .mdlcnt_deleteacc {
@@ -2717,9 +2723,9 @@ ul.list-inline li a:hover {
     font-size: 20px;
   }
 
-  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+  /* .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
     margin: 0 15px;
-  }
+  } */
 }
 
 .conthowtoplay_videocont .rowhowtoplay {
@@ -3310,7 +3316,7 @@ ul.list-inline li a:hover {
 }
 
 .menuname_withicon .menuiconimgdiv img {
-  width: 33px;
+  /* width: 33px; */
 }
 
 .menubar_divmain {
@@ -3383,12 +3389,15 @@ ul.list-inline li a:hover {
     width: 20px;
   }
 
+
+
   .humbergermenulist .menubaricons img {
     width: 25px;
   }
 
   .menulist_divmanin .menubar_list_ul {
     width: 100%;
+
   }
 
   /* .hideonmob_icon{display: none;} */
@@ -3433,14 +3442,14 @@ ul.list-inline li a:hover {
 .everyweekfixedtext h4 {
   margin-bottom: 15px;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 800;
   letter-spacing: 0.5px;
   line-height: 40px;
-  color: #fff;
+  color: #000;
 }
 
 .everyweekfixedtext h4 span {
-  color: #00e56a;
+  color: #008d41;
   font-size: 46px;
 }
 
@@ -3937,6 +3946,7 @@ ul.list-inline li a:hover {
   line-height: 40px;
   font-size: 26px;
   color: #7cab05;
+  pointer-events: none;
 }
 
 .winnercirlce_timeline_row {
@@ -5130,8 +5140,12 @@ ul.list-inline li a:hover {
 .col3ticketscontest .ticketaxis_div {
   background: #fff;
   height: 100%;
-  padding: 20px 15px;
+  padding: 10px 10px;
   border-radius: 10px;
+}
+
+.actionicon_btn .threeicons_action p {
+  margin-bottom: 0;
 }
 
 .ticketaxis_div .ticketheading {
@@ -5142,7 +5156,7 @@ ul.list-inline li a:hover {
   text-align: center;
   font-weight: 600;
   color: #000;
-  font-size: 25px;
+  font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
@@ -5152,7 +5166,7 @@ ul.list-inline li a:hover {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .actionicon_btn .threeicons_action {
@@ -5204,7 +5218,7 @@ ul.list-inline li a:hover {
 }
 
 .allticketmaindiv_contest {
-  max-height: 375px;
+  max-height: 191px;
   overflow: auto;
 }
 
@@ -5214,9 +5228,9 @@ ul.list-inline li a:hover {
 
 .contestticketdiv_main .contest_cordinates_div {
   background: #ab0505;
-  padding: 15px;
+  padding: 7px 12px;
   border-radius: 4px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 /* .contestticketdiv_main .contest_cordinates_div:last-child {
@@ -5226,7 +5240,7 @@ ul.list-inline li a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 8px;
 }
 
 .contestprice_tickets .pricewithcontest h3 {
@@ -5273,7 +5287,7 @@ ul.list-inline li a:hover {
   margin-bottom: 0;
   color: #fff;
   font-weight: 600;
-  font-size: 22px;
+  font-size: 18px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -5443,7 +5457,7 @@ ul.list-inline li a:hover {
 }
 
 .jackpot_ticket_cart h3 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   color: #656565;
   margin-bottom: 8px;
@@ -5722,8 +5736,8 @@ ul.list-inline li a:hover {
 
 .pastpay_right .pastpay_invoicediv .downloadinvoice_hreftag {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: end;
+  align-items: flex-end;
   gap: 5px;
   color: #000;
   margin-bottom: 8px;
@@ -5818,6 +5832,7 @@ ul.list-inline li a:hover {
 
   .pastpay_right p {
     font-size: 10px;
+    word-wrap: break-word;
   }
 }
 
@@ -6321,7 +6336,7 @@ ul.list-inline li a:hover {
   }
 
   .notificationdiv_popup .notifi_innerdiv {
-    max-height: 100%;
+    max-height: 82%;
     height: 100%;
   }
 
@@ -6843,11 +6858,53 @@ a.btn-download {
     display: none;
   }
 
+  img.showclick_icon {
+    right: 12px;
+    margin-bottom: -66px;
+    position: absolute;
+    top: 15px;
+  }
+
+  .arrowicondiv {
+    position: relative;
+    margin-top: 15px;
+  }
+
   .btn.btn-dark {
     font-size: 11px;
     width: 102px;
     padding: 6px 3px;
   }
+
+  .coltabbingdiv .navtabdiv .nav-tabs .nav-item .nav-link .tabbingiconbgdiv img {
+    width: 25px;
+    line-height: 25px;
+    padding-top: 6px;
+    height: auto;
+  }
+
+  .userimg_namediv .profilename_mail a {
+    font-size: 13px;
+    color: #ffffff;
+  }
+
+  .update_profile_main .userimg_namediv {
+    gap: 10px;
+  }
+
+  p.hidball {
+    margin-right: 10px;
+  }
+}
+
+
+
+@media(max-width:991px) {
+
+  .inthepressdivmain p {
+    height: auto;
+  }
+
 }
 
 .support-email {
@@ -6906,4 +6963,343 @@ a.btn-download {
 .lang_icons .mainmenulist .menubar_divmain {
 
   padding: 1px 15px;
+}
+
+img.showclick_icon {
+  right: 12px;
+  margin-bottom: -66px;
+  position: absolute;
+  top: 15px;
+}
+
+.arrowicondiv {
+  position: relative;
+}
+
+.btn.btn-dark {
+  font-size: 11px;
+  width: 102px;
+  padding: 6px 3px;
+}
+
+.transaction-sec {
+  padding: 10px;
+}
+
+.payment-option h4 {
+  font-size: 15px;
+  color: #a5a5a5;
+  letter-spacing: 0.4px;
+}
+
+.payment-option span {
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 0.4px;
+  font-weight: bold;
+}
+
+.payment-success-div .icon {
+  background-color: #009E49;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 10px;
+}
+
+.payment-success-div .paybtn_debitcard {
+  border: none;
+  background: #009E49;
+  width: 100%;
+  height: 50px;
+  outline: none;
+  box-shadow: 0px 2px 4px 0px #00000040;
+  margin: 0 auto;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.4px;
+  margin-top: 20px;
+}
+
+.payment-success-div .icon span {
+  font-size: 30px;
+  color: #fff;
+}
+
+.payment-success-div .subtitle {
+  color: #b0b0b0;
+  margin: 0 0 20px;
+}
+
+.payment-success-div .order-id {
+  background-color: #333;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: block;
+  color: #b0b0b0;
+  width: fit-content;
+  margin: 20px auto;
+}
+
+.payment-success-div .order-id span {
+  font-size: 14px;
+}
+
+.payment-success-div .details {
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.payment-success-div .details p {
+  margin: 5px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.payment-success-div .details span {
+  color: #fff;
+}
+
+.payment-success-div .details span.bold {
+  font-weight: bold;
+}
+
+.crosshair {
+  transition: left 0.2s ease-out, top 0.2s ease-out;
+}
+
+section.maincont_section.liv_Weekly {
+  padding-bottom: 90px;
+  padding-top: 66px;
+  margin-top: 4px;
+}
+
+@media (max-width: 767px) {
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 320px) and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 375px) and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 425px) and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 600px) and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 1024px) and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 575px)and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 767px) and (orientation: landscape) {
+  .deleteacc_mainpopup_mdl .deleteacc_mdldlg {
+    top: 6% !important;
+  }
+
+  .modal-dialog {
+    max-width: 90% !important;
+    margin: auto;
+  }
+
+  .menuname_withicon .menuiconimgdiv img {
+    width: 80% !important;
+  }
+
+  .menulist_divmanin .menubar_list_ul {
+    width: 100% !important;
+    height: 200px !important;
+    overflow-y: auto !important;
+  }
+
+  .notify-icondiv img {
+    width: 100% !important;
+  }
+
+  img.notification_img {
+    width: 100% !important;
+  }
 }
