--- a/public/css/main.css
+++ b/public/css/main.css
@@ -666,7 +666,7 @@ ul.list-inline li a:hover {
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
-  background-image: url(../images/contest_bg_img.png);
+  background-image: url(../image/contest_bg_img.png);
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 15px 13px 13px -12px rgba(00, 00, 00, 0.3);
@@ -2642,7 +2642,7 @@ ul.list-inline li a:hover {
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.4);
   border-radius: 10px;
   background-color: #fff;
-  background-image: url(../images/weeklyjackpot_bg.png);
+  background-image: url(../image/weeklyjackpot_bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -3744,7 +3744,7 @@ ul.list-inline li a:hover {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background-image: url(../images/contest_bg_img.png);
+  background-image: url(../image/contest_bg_img.png);
   background-size: cover;
   background-repeat: no-repeat;
   border: 2px solid #009e49;
@@ -4215,7 +4215,7 @@ ul.list-inline li a:hover {
 
 .col5forcontactdetails .contactdetails_div {
   padding: 20px 50px 30px 25px;
-  background: url(../images/contact_info_bg.png);
+  background: url(../image/contact_info_bg.png);
   background-repeat: no-repeat;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -4638,7 +4638,7 @@ ul.list-inline li a:hover {
 }
 
 .myacocunt_sectionforbgimg {
-  background-image: url(../images/my_acc_bg.png);
+  background-image: url(../image/my_acc_bg.png);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -5837,7 +5837,7 @@ ul.list-inline li a:hover {
 }
 
 .rowpressemptymain .presspageemptydiv {
-  background-image: url(../images/press_bg_fresh.png);
+  background-image: url(../image/press_bg_fresh.png);
   background-size: cover;
   background-position: center;
   padding: 70px 20px;
