--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,9 +4,9 @@
   scroll-behavior: smooth;
 }
 
-.innerheader_new .topfirstbar .ends_compititionssiv_top {
+/* .innerheader_new .topfirstbar .ends_compititionssiv_top {
   background: #000000;
-}
+} */
 
 .innerheader_new .header3 {
   background-color: #0b1874 !important;
@@ -1546,10 +1546,10 @@ ul.list-inline li a:hover {
 }
 
 .addtocart_newpopup .addtocart_content_popup {
-  background: #0b1874;
+  background: #ffffff;
   padding: 30px;
   border-radius: 12px;
-  width: 600px;
+  width: 720px;
   box-shadow: 0px 2px 6px 0px #00000040;
   position: relative;
 }
@@ -3636,7 +3636,7 @@ ul.list-inline li a:hover {
 }
 
 .colmainheading_innerpages .pageheading_main p {
-  color: #717171;
+  color: #0e0e0e;
   font-size: 18px;
   text-align: center;
   margin-top: 24px;
@@ -3709,8 +3709,13 @@ ul.list-inline li a:hover {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
+.row.rowpressemptymain p {
+  color: black;
+  font-weight: 500;
+}
+
 .inthepressdivmain p {
-  color: #6a6a6a;
+  color: #000000;
   font-size: 16px;
   line-height: 26px;
   margin-top: 20px;
@@ -4136,19 +4141,23 @@ ul.list-inline li a:hover {
 
 .jackpotwinner_div .winnerabouttext h3 {
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 800;
   margin-bottom: 5px;
+  color: black;
 }
 
 .jackpotwinner_div .winnerabouttext p {
   margin-bottom: 10px;
   font-size: 16px;
+  color: black;
+  font-weight: 500;
 }
 
 .jackpotwinner_div .winnerabouttext h4 {
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 800;
   margin-bottom: 5px;
+  color: black;
 }
 
 .content-right-container .rowforwinner_boxes {
@@ -4508,7 +4517,7 @@ ul.list-inline li a:hover {
   padding: 6px;
   vertical-align: baseline;
   line-height: 35px;
-  width: 35px;
+  width: 35px !important;
   height: 35px;
 }
 
@@ -4519,6 +4528,7 @@ ul.list-inline li a:hover {
 
 .coltabbingdiv .navtabdiv .nav-tabs .nav-item .nav-link .navlinkname {
   margin-top: 3px;
+  font-weight: 700;
 }
 
 .coltabbingdiv .navtabdiv .nav-tabs .nav-item .nav-link.active {
@@ -4558,7 +4568,7 @@ ul.list-inline li a:hover {
 .legaltermsdata_div .innerlegal_heaidngwithpara p {
   font-size: 16px;
   text-align: justify;
-  color: #6a6a6a;
+  color: #0e0e0e;
   font-weight: 400;
   margin-bottom: 20px;
 }
@@ -5527,11 +5537,16 @@ ul.list-inline li a:hover {
   font-size: 18px;
   font-weight: 700;
   padding: 0.5rem;
+  background: #ffffff;
+  border-bottom: none;
+  color: black;
+  border-bottom: 2px solid #dee2e6;
 }
 
 .cordinates_table_cart .cordtable_new tr td {
   padding: 0.5rem;
   font-size: 16px;
+  color: #000000;
 }
 
 @media (max-width: 767px) {
@@ -6441,7 +6456,7 @@ img.showclick_icon {
   margin-bottom: 0;
   font-size: 16px;
   font-weight: 600;
-  color: #000;
+  color: #ffffff;
 }
 
 .promo-message.success {
@@ -7302,4 +7317,40 @@ section.maincont_section.liv_Weekly {
   img.notification_img {
     width: 100% !important;
   }
+}
+
+
+
+.card.first.dis_card .content h1 {
+  font-size: 20px;
+}
+
+.card.first.dis_card .content h2 {
+  font-size: 14px;
+}
+
+.card.first.dis_card::after {
+
+  background-color: #ffffff;
+}
+
+.card.first.dis_card::before {
+
+  background-color: #ffffff;
+}
+
+.card.first.dis_card {
+  background: #ebebeb;
+}
+
+.dis-pop h5 {
+  color: black;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+a.resend-btn {
+  color: green !important;
+  font-size: 18px;
 }
