last sloved bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3692,7 +3692,8 @@ ul.list-inline li a:hover {
   padding: 12px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 10px;
-  height: 100%;
+  height: 480px;
+  position: relative;
 }
 
 .inthepressdivmain img {
@@ -3716,7 +3717,7 @@ ul.list-inline li a:hover {
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: justify;
-  height: 35%;
+  /* height: 35%; */
 }
 
 .inthepressdivmain a {
@@ -3735,6 +3736,15 @@ ul.list-inline li a:hover {
   letter-spacing: 0.4px;
   text-align: center;
   line-height: 45px;
+}
+
+a.seefullarticle_btn {
+  color: #ffff;
+  position: absolute;
+  bottom: 20px;
+  left: 9px;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .contfor_livewinner .rowlivewinnermain {
